# photoman-rs

./: Cargo.toml  README.md  REAMDEDEV.md
resources/: raw_extensions
src/: error.rs  exifreader.rs  filesearch.rs  imageinfo.rs  iocommands.rs  lib.rs  main.rs  manager.rs  photoman.rs  progress.rs
src/exifreader/: rustreader.rs
test_data/: exif-randomdate.config
test_data/images/: images info.txt
tests/: prepare_suite.rs  tst_arrange.rs
